[tool.poetry]
name = "my-gpt"
version = "0.1.0"
description = ""
authors = ["avi <avidev9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.29.0"
pygpt4all = "^1.1.0"
torch = "^2.0.1"
accelerate = "^0.19.0"
python-dotenv = "^1.0.0"
rich = "^13.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
